Fix: Backgorund images center align.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -102,36 +102,41 @@ section#navbar{
 section#pictureHero{
     background-image: url(./img/Pic-Hero.jpg);
     background-size: cover;
-    filter: blur(.5px) opacity(90%);
+    filter: opacity(90%);
     height: 100vh;
+    background-position: center;
 }
     /*PICTURES*/
 section#picture1{
     background-image: url(./img/Pic-Jump.jpg);
     height: 100vh;
     background-size: cover;
-    filter: opacity(90%); //grayscale(20%);
+    filter: opacity(90%);
+    background-position: center;
     //background-attachment: fixed;
 }
 section#picture2{
     background-image: url(./img/1.JPG);
     height: 100vh;
     background-size: cover;
-    filter: blur(5px); // grayscale(20%);
+    filter: blur(5px);
+    background-position: center;
     //background-attachment: fixed;
 }
 section#picture3{
     background-image: url(./img/Main.JPG);
     height: 100vh;
     background-size: cover;
-    filter: blur(5px); // grayscale(20%);
+    filter: blur(5px);
+    background-position: center;
     //background-attachment: fixed;
 }
 section#picture4{
     background-image: url(./img/Pic-Headweare.jpg);
     height: 100vh;
     background-size: cover;
-    filter: opacity(90%); // grayscale(20%);
+    filter: opacity(90%);
+    background-position: center;
     //background-attachment: fixed;
 }
     //Hero Titles
